2005-09-26  Per Bothner  <per@bothner.com>

	* gui.scm (image-width, image-height): New procedures.
	(read-image): Renamed to image-read for naming consistency.

2005-06-06   Robert D. Skeels <athene@earthlink.net>

	* gui.scm (color-red): Use 'red rather than 'RED, since former is
	portable to older JDK versions.

2005-04-11  Per Bothner  <per@bothner.com>

	* Makefile.am: gui.scm needs both --with-swing and --enable-xml.

2005-04-02  Per Bothner  <per@bothner.com>

	* testing.scm: New file - srfi-64 (draft) reference implementation.
	* Makefile.am (java_SCM): Update accordingly.

2005-02-07  Per Bothner  <per@bothner.com>

	* Makefile.am (java_SCM): Re-order so DefineRecordType.scm is
	compiled before srfi-37, which uses define-record.type.

	* srfi-37.scm (arg-fold): Use define-function syntax rather than
	an explicit lambda, so Kawa generates a true function definition.

2005-01-29  Per Bothner  <per@bothner.com>

	* srfi37.scm:  Use module-export.

2005-01-29  Anthony Carrico

	* srfi37.scm: SRFI-37 reference implementation.

2004-12-27  Per Bothner  <per@bothner.com>

	* Makefile.am: No longer need to force ../../../kawa to be made first.

2004-12-08  Per Bothner  <per@bothner.com>

	* gui.scm (process-keywords): New function.  Use where needed.

2004-07-11  Chris Dean  <ctdean@sokitomi.com>

	* srfi1.scm: Many functions written to be tail recursive.

2004-06-12  Per Bothner  <per@bothner.com>

	* gui.scm (frame):  Process args list "manually", since we want
	to allow content to be multiple values in Q2.

2004-05-17  Per Bothner  <per@bothner.com>

	* srfi1.scm (lset-xor!):  Fix argument order bug.

2003-05-09  Chris Dean  <Chris.Dean@sokitomi.com>

	* srfi1.scm (lset-xor):  Fix argument order bug.
	Patch from Savannah bug #8852.

2004-05-03  Per Bothner  <per@bothner.com>

	* srfi1.scm ((list-copy (lis :: <list>))):  Re-written to be iterative
	rather than recursive - which can lead to stack overflow.

2004-03-13  Per Bothner  <per@bothner.com>
