@@ -1,3 +1,14 @@
+2005-08-15  Alex Shinn <alexshinn@gmail.com>
+
+	* testing.scm: Add "full" support for Chicken, Gauche, Guile and SISC.
+	Load/require needed modules/extensions.
+	(test-source-location-cons%): Implement for Chicken and Gauche.
+	(test-evaluate-with-catch%): Add Guile and Chicken support.
+	(test-evaluate-with-catch%): Fix typo in syntax-rules pattern.
+	(test-error%): Add Guile and Chicken support.
+	Fix srfi-35 / srfi-34 errors.
+	Evaluate expr in default case.
+
 2005-09-26  Per Bothner  <per@bothner.com>
 
 	* gui.scm (image-width, image-height): New procedures.
